# lme-eeg

./: .gitignore  README.md  pyproject.toml
examples/: crossed_subject_item.py  minimal_subject_intercept.py
notebooks/: minimal_example.ipynb  single_electrode_example.ipynb
src/lmeeeg/: __init__.py
src/lmeeeg/api/: __init__.py  fit.py  infer.py  simulate.py
src/lmeeeg/backends/correction/: __init__.py  _regression.py  base.py  maxstat_backend.py  mne_cluster_backend.py  mne_tfce_backend.py
src/lmeeeg/backends/lmm/: __init__.py  base.py  statsmodels_backend.py
src/lmeeeg/backends/ols/: __init__.py  base.py  numpy_backend.py
src/lmeeeg/core/: __init__.py  coding.py  contrasts.py  design.py  formulas.py  marginal.py  results.py
src/lmeeeg/simulation/: __init__.py  generator.py  scenarios.py
src/lmeeeg/utils/: checks.py  reshape.py  summary.py
src/lmeeeg/viz/: mne_helpers.py
tests/api/: test_fit.py  test_infer.py
tests/backends/correction/: test_maxstat_backend.py  test_mne_backends.py
tests/backends/lmm/: test_statsmodels_backend.py
tests/backends/ols/: test_numpy_backend.py
tests/core/: test_coding.py  test_contrasts.py  test_design.py  test_formulas.py  test_marginal.py
tests/simulation/: test_generator.py  test_recovery.py
