[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmeeeg"
version = "0.1.0"
description = "Minimal Python implementation of lmeEEG for random-intercept mass-univariate M/EEG analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI", email = "support@openai.com"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "patsy>=0.5",
]

[project.optional-dependencies]
mne = ["mne>=1.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
